refactor: Revamp Amazon Orders Extension with modular architecture and improved UI
- Reorganized background and content scripts into modular components for better maintainability.
- Updated the extension name from "Amazon Spend Dashboard" to "Amazon Orders Dashboard" for clarity.
- Enhanced event handling and communication between background and content scripts.
- Improved UI elements and added functionality for better user interaction and data visualization.
- Implemented robust error handling and debugging features for improved reliability during scans.

--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Amazon Spend Dashboard</title>
+  <title>Amazon Orders Dashboard</title>
   <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
   <div class="container">
-    <h1>Amazon Spend Dashboard</h1>
+    <h1>Amazon Orders Dashboard</h1>
     <p class="muted">Navigate to your Amazon <em>Your Orders</em> Calculate your spending.</p>
 
     <div class="row">
